# summit_panda

./: README.md  multi_robot.xacro  multi_summit.urdf  multi_summit.xacro  summit_xl.srdf  summit_xls_franka_std.urdf  summit_xls_franka_std.urdf.xacro
summit_panda_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
summit_panda_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
summit_panda_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl_planning_pipeline.launch.xml  (+8 more)
summit_xl_description/: CMakeLists.txt  package.xml
summit_xls/summit_xls_franka_sim/: CMakeLists.txt  package.xml
summit_xls/summit_xls_franka_sim/config/: amcl.yaml  fr3_control.yaml  move_base_params.yaml
summit_xls/summit_xls_franka_sim/launch/: amcl_sim.launch  gazebo_sim_rviz.launch  move_base_teb.launch  summit_xls_franka_complete.launch  summit_xls_franka_control.launch  summit_xls_franka_gazebo.launch  summit_xls_franka_one_robot.launch
summit_xls/summit_xls_franka_sim/urdf/: d435.urdf.xacro  omni_wheel.urdf.xacro  roas.urdf.xacro  summit_xls_franka_base.gazebo.xacro  summit_xls_franka_base.urdf.xacro  summit_xls_franka_std.urdf.xacro  summit_xls_franka_std_modified.urdf  summit_xls_franka_std_modified.urdf.xacro
summit_xls/summit_xls_franka_sim/urdf/arm/: fr3.urdf.xacro  franka_arm.xacro  franka_hand.xacro  franka_robot.xacro  hand.urdf.xacro  inertial.yaml  utils.xacro
(+43 files in other folders)
